<resources>
    <string name="app_name">Toll Plaza</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="We_will_Send_You_an_One_Time_Password_on_this_Mobile_Number">We will Send You an One Time Password on this Mobile Number</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="_91">+91</string>
    <string name="_9999999999">9999999999</string>
    <string name="_getotp">REQUEST OTP</string>
    <string name="Enter_the_otp">Enter the OTP send to</string>
    <string name="didn_t_recieve_the_otp">Didn\'t Recieved the OTP ?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="_confirmotp">Validate</string>
    <string name="title_activity_vehicle_registration">VehicleRegistration</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="email">Email</string>


    <!-- Bottom Navigation -->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="username">Username</string>
    <string name="mobile">Mobile</string>
    <string name="city">City</string>
    <string name="con_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="condition1">By signing up you agree to our</string>
    <string name="condition2">Terms of Service</string>
    <string name="condition3">and</string>
    <string name="condition4">Privacy Policy</string>
    <string name="already_account">Already have an account ?</string>
    <string name="Login">Login</string>
    <string name="seller_Register">Want be a seller</string>

    //Seller Register form
    <string name="s_sign_up">Sign Up - Seller</string>
    <string name="s_sign_up_to_discover_amazing_things">Sign up to Sell amazing things</string>
    <string name="s_username">Username</string>
    <string name="s_email">Email</string>
    <string name="s_mobile">Mobile</string>
    <string name="s_password">Password</string>
    <string name="s_con_password">Confirm Password</string>
    <string name="s_address">Address</string>
    <string name="s_shopname">Shop Name</string>

    //Seller_add_Product
    <string name="add_product">Add Product</string>
    <string name="add_product_des">Add Your All Products With Image</string>
    <string name="product_name">Product Name</string>
    <string name="product_des">Product Description</string>
    <string name="category">Category</string>
    <string name="discount">Is Discount Available</string>
    <string name="back">Back To Previous</string>
    <string name="quantity">Quantity e.g kg,g etc.</string>
    <string name="product_price">Price</string>
    <string name="product_discount_price">Discount Price</string>
    <string name="product_discount_des">Discount Description e.g 10% off</string>
    <string name="product_btn">Add Product</string>
    <string name="product_dis_desc">10% Off</string>

    //Seller Edit Products
    <string name="product_update_btn">Update Product</string>

    //seller_profile
    <string name="seller_username">Username</string>
    <string name="seller_shopname">Shop Name</string>
    <string name="seller_phone">Mobile</string>
    <string name="seller_address">Address</string>
    <string name="seller_delivery">Delivery Fee</string>
    <string name="btn_update">Update Profile</string>
    <string name="btn_switch">Shop Open</string>
    <string name="first_slide_desc">You can search any place nearby or with-in the specified city. We will display specific or all related shops to match your search. </string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us. You can perform bookings as well.</string>
    <string name="third_slide_desc">If you have a shop or somethings and want to be a part of our growing industry then add your place by follwing simple steps.</string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the app in your pocket then you dont have to worry about anything.  </string>
    <string name="introtype">Thermos is a Mobile Application that Connects dynamic (Moving) Sellers and their buyers. There are many moving sellers who sell products,consumable and provide various services while moving in streets of towns and villages.</string>

    <string name="first_side_title">You Can Order Ant Time from Online Market</string>
    <string name="into_dec">Fly Shopping is a mobile application that connects dynamic(moving) sellers and their buyers.In our country there are many moving sellers who sell products,consumables and provide various services while moving in streets of towns and villages.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_seller_add_product">SellerAddProductActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>



    <string name="work_shift">Work Shift</string>
        <array name="work_shifts">
            <item>Morning Shift</item>
            <item>Afternoon Shift</item>
            <item>Evening Shift</item>
            <item>Night Shift</item>
        </array>

    <string name="default_web_client_id" />


</resources>